# RaccoonPot

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
.github/workflows/: cmake.yml
inc/RP/: Game.hpp  GameOptions.hpp  RP.hpp  RPMacros.hpp  Types.hpp
inc/RP/Core/: Coordinator.hpp  Coordinator.inl  Scene.hpp
inc/RP/Core/Components/: ComponentArray.hpp  ComponentArray.inl  Transform2.hpp
inc/RP/Core/Managers/: ComponentManager.hpp  ComponentManager.inl  EntityManager.hpp  EventManager.hpp  EventManager.inl  GuiManager.hpp  GuiManager.inl  ResourceManager.hpp  SceneManager.hpp  SceneManager.inl  SystemManager.hpp  SystemManager.inl
inc/RP/Core/Resources/: Font.hpp  SpriteSheet.hpp
inc/RP/Core/Systems/: System.hpp
inc/RP/Gui/: AlignItems.hpp  Anchors.hpp  GuiBuilder.hpp  GuiButton.hpp  GuiButtonText.hpp  GuiButtonTexture.hpp  GuiButtonTextureText.hpp  GuiPanel.hpp  GuiText.hpp  GuiWidget.hpp  IGuiRenderSystem.hpp
inc/RP/Logs/: Log.hpp  Log.inl
inc/RP/Math/: Vector2.hpp  Vector3Int.hpp
inc/RP/Utils/: Utils.hpp
src/: CMakeLists.txt  Main.cpp
src/Demo/: CMakeLists.txt  Main.cpp  Main.hpp  Sort.cpp  Sort.hpp
src/DemoGame/: CMakeLists.txt  Main.cpp  Main.hpp  Sort.cpp  Sort.hpp  SortGui.cpp  SortGui.hpp
src/DemoGame/src/: DemoGame.cpp  DemoGame.hpp  Events.hpp  Game.cpp  Game.hpp  SdlGuiRenderSystem.cpp  SdlGuiRenderSystem.hpp  Utils.cpp  Utils.hpp
src/DemoGame/src/Components/: Renderable.hpp
src/DemoGame/src/Entities/: Button.cpp  Button.hpp
src/DemoGame/src/Gui/: GuiButtonTexture.cpp  GuiButtonTexture.hpp
src/DemoGame/src/Scenes/: GameScene.cpp  GameScene.hpp  MenuScene.cpp  MenuScene.hpp  Scene.cpp  Scene.hpp  SceneAction.hpp
src/DemoGame/src/Systems/: RenderSystem.cpp  RenderSystem.hpp
src/ECSGameEngine/: CMakeLists.txt
src/ECSGameEngine/src/Core/: Coordinator.cpp  Coordinator.hpp  Coordinator.inl  Scene.cpp  Scene.hpp  Types.hpp
src/ECSGameEngine/src/Core/Components/: ComponentArray.hpp  ComponentArray.inl
src/ECSGameEngine/src/Core/Managers/: ComponentManager.cpp  ComponentManager.hpp  ComponentManager.inl  EntityManager.cpp  EntityManager.hpp  SceneManager.cpp  SceneManager.hpp  SceneManager.inl  SystemManager.cpp  SystemManager.hpp  SystemManager.inl
src/ECSGameEngine/src/Core/Systems/: System.hpp
src/ECSGameEngine/src/Logs/: Log.cpp  Log.hpp
src/Game/: CMakeLists.txt
src/Game/src/: Game.cpp  Game.hpp
src/GameEngine/: CMakeLists.txt
src/GameEngine/src/Core/: Coordinator.cpp  Coordinator.hpp
src/GameEngine/src/Core/Components/: ComponentArray.hpp  ComponentArray.inl
src/GameEngine/src/Core/Managers/: ComponentManager.cpp  ComponentManager.hpp  EntityManager.cpp  EntityManager.hpp  SystemManager.hpp
src/GameEngine/src/Core/Systems/: System.hpp
src/RaccoonPot/: CMakeLists.txt
src/RaccoonPot/RP/: Game.cpp  RP.hpp
src/RaccoonPot/RP/Core/: Coordinator.cpp  Coordinator.hpp  Coordinator.inl  Scene.cpp  Scene.hpp  Types.hpp
src/RaccoonPot/RP/Core/Components/: ComponentArray.hpp  ComponentArray.inl  Size2.hpp  Transform2.hpp
src/RaccoonPot/RP/Core/Managers/: ComponentManager.cpp  ComponentManager.hpp  ComponentManager.inl  EntityManager.cpp  EntityManager.hpp  EventManager.cpp  EventManager.hpp  EventManager.inl  GuiManager.cpp  GuiManager.hpp  GuiManager.inl  ResourceManager.cpp  SceneManager.cpp  SceneManager.hpp  SceneManager.inl  SystemManager.cpp  SystemManager.hpp  SystemManager.inl
src/RaccoonPot/RP/Core/Resources/: Font.cpp  SpriteSheet.cpp
src/RaccoonPot/RP/Core/Systems/: System.hpp
src/RaccoonPot/RP/Gui/: GuiButton.cpp  GuiButton.hpp  GuiButtonText.cpp  GuiButtonText.hpp  GuiButtonTexture.cpp  GuiButtonTextureText.cpp  GuiPanel.cpp  GuiText.cpp  GuiText.hpp  GuiWidget.cpp  GuiWidget.hpp
src/RaccoonPot/RP/Logs/: Log.cpp  Log.hpp
src/RaccoonPot/RP/Math/: Vector2.cpp  Vector2.hpp  Vector3Int.cpp
src/RaccoonPot/RP/Utils/: Utils.cpp
tests/: CMakeLists.txt  Main.cpp
tests/Common/: CommonCheck.hpp  CommonComponent.hpp  CommonGui.hpp  CommonScene.hpp  CommonSystem.hpp  CommonTestData.hpp  CommonTypes.hpp
tests/IntegrationTests/: CoordinatorTest.cpp
tests/UnitTests/: ComponentArrayTest.cpp  ComponentManagerTest.cpp  EntityManagerTest.cpp  EventManagerTest.cpp  GuiManagerTest.cpp  GuiWidgetTest.cpp  LogTest.cpp  ResourceManagerTest.cpp  SceneManagerTest.cpp  SpriteSheetTest.cpp  SystemManagerTest.cpp
tests/tests/: ComponentArrayTest.cpp  EventManagerTest.cpp  GuiBuilderTest.cpp  GuiManagerTest.cpp  GuiWidgetTest.cpp
